<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cs371.carstereo.MainActivity">

    <LinearLayout
        android:layout_width="1024dp"
        android:layout_height="631dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="?android:attr/colorButtonNormal"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:background="?android:attr/colorButtonNormal"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_width="match_parent">

            <Space
                android:layout_width="150dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:background="?android:attr/colorButtonNormal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/cassette"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@android:color/holo_red_light"
                    android:inputType="textPersonName"
                    android:text="@string/cassetteTape"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/rewind"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?attr/colorPrimary"
                        android:text="@string/rewind" />

                    <Button
                        android:id="@+id/playPause"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/holo_green_light"
                        android:text="@string/Play" />

                    <Button
                        android:id="@+id/forward"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="@string/forward" />
                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <Button
                    android:id="@+id/eject"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@android:color/holo_orange_dark"
                    android:text="@string/Eject" />
            </LinearLayout>

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="0" />

                <TextView
                    android:id="@+id/carRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/carRadio"
                    android:textSize="60sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@android:color/holo_blue_light"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_width="match_parent">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
